[package]
name = "auxlua"
version = "0.1.2"
authors = ["Y0SH1M4S73R <legoboyo@earthlink.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
auxtools = {git = "https://github.com/Y0SH1M4S73R/auxtools", branch = "full_shutdown", features = ["unpinned-dll"]}
mlua = {version = "0.8.0", features = ["luau"]}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "psapi", "processthreadsapi"] }