[package]
name = "auxlua"
version = "1.3.3"
authors = ["Y0SH1M4S73R <legoboyo@earthlink.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
auxtools = {git = "https://github.com/willox/auxtools"}
mlua = {version = "0.8.2", features = ["luau"]}